--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,19 @@
 <!doctype html>
 <html>
 <head>
+
+  <!--<link rel="stylesheet" type="text/css" href="./app/materialize/css/materialize.min.css">-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
+
+
+
   <meta charset="utf-8">
-  <title>Shop</title>
+  <title>angular 2</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,3 +23,6 @@
   <app-root>Loading...</app-root>
 </body>
 </html>
+<script>
+   $(".button-collapse").sideNav();
+</script>
